web-infras/parser/tests/fixtures/babel/core/uncategorised/405/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,3)
1|a b;
 | ^
